chore: restructure and setup routes

--- a/client/views/chat.ejs
+++ b/client/views/chat.ejs
@@ -4,16 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat App</title>
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <script src="https://kit.fontawesome.com/bfa93e93e8.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    asd
     <div class="wrapper">
       <section class="chat-area">
         <header>
           <a href="" class="back-icon"><i class="fas fa-arrow-left"></i></a>
-          <img src="assets/img/images.jpeg" alt="" />
+          <img src="img/images.jpeg" alt="" />
           <div class="details">
             <span>Baruak Tampan</span>
             <p>Online</p>
@@ -29,7 +28,7 @@
             </div>
           </div>
           <div class="chat incoming">
-            <img src="assets/img/images.jpeg" alt="" />
+            <img src="img/images.jpeg" alt="" />
             <div class="details">
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
             </div>
@@ -43,7 +42,7 @@
             </div>
           </div>
           <div class="chat incoming">
-            <img src="assets/img/images.jpeg" alt="" />
+            <img src="img/images.jpeg" alt="" />
             <div class="details">
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
             </div>
@@ -57,7 +56,7 @@
             </div>
           </div>
           <div class="chat incoming">
-            <img src="assets/img/images.jpeg" alt="" />
+            <img src="img/images.jpeg" alt="" />
             <div class="details">
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
             </div>
