--- a/client/views/user.ejs
+++ b/client/views/user.ejs
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat App</title>
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <script src="https://kit.fontawesome.com/bfa93e93e8.js" crossorigin="anonymous"></script>
-    <script defer src="assets/js/users.js"></script>
+    <script defer src="js/users.js"></script>
   </head>
   <body>
     <div class="wrapper">
       <section class="users">
         <header>
           <div class="content">
-            <img src="assets/img/images.jpeg" alt="" />
+            <img src="img/images.jpeg" alt="" />
             <div class="details">
               <span>Baruak Tampan</span>
               <p>Online</p>
@@ -29,7 +29,7 @@
         <div class="users-list">
           <a href="">
             <div class="content">
-              <img src="assets/img/images.jpeg" alt="" />
+              <img src="img/images.jpeg" alt="" />
               <div class="details">
                 <span>Baruak Tampan</span>
                 <p>test Message</p>
@@ -39,7 +39,7 @@
           </a>
           <a href="">
             <div class="content">
-              <img src="assets/img/images.jpeg" alt="" />
+              <img src="img/images.jpeg" alt="" />
               <div class="details">
                 <span>Baruak Tampan</span>
                 <p>test Message</p>
@@ -48,7 +48,7 @@
             <div class="status-dot"><i class="fas fa-circle"></i></div> </a
           ><a href="">
             <div class="content">
-              <img src="assets/img/images.jpeg" alt="" />
+              <img src="img/images.jpeg" alt="" />
               <div class="details">
                 <span>Baruak Tampan</span>
                 <p>test Message</p>
@@ -58,7 +58,7 @@
           </a>
           <a href="">
             <div class="content">
-              <img src="assets/img/images.jpeg" alt="" />
+              <img src="img/images.jpeg" alt="" />
               <div class="details">
                 <span>Baruak Tampan</span>
                 <p>test Message</p>
@@ -68,7 +68,7 @@
           </a>
           <a href="">
             <div class="content">
-              <img src="assets/img/images.jpeg" alt="" />
+              <img src="img/images.jpeg" alt="" />
               <div class="details">
                 <span>Baruak Tampan</span>
                 <p>test Message</p>
@@ -78,7 +78,7 @@
           </a>
           <a href="">
             <div class="content">
-              <img src="assets/img/images.jpeg" alt="" />
+              <img src="img/images.jpeg" alt="" />
               <div class="details">
                 <span>Baruak Tampan</span>
                 <p>test Message</p>
@@ -88,7 +88,7 @@
           </a>
           <a href="">
             <div class="content">
-              <img src="assets/img/images.jpeg" alt="" />
+              <img src="img/images.jpeg" alt="" />
               <div class="details">
                 <span>Baruak Tampan</span>
                 <p>test Message</p>
@@ -98,7 +98,7 @@
           </a>
           <a href="">
             <div class="content">
-              <img src="assets/img/images.jpeg" alt="" />
+              <img src="img/images.jpeg" alt="" />
               <div class="details">
                 <span>Baruak Tampan</span>
                 <p>test Message</p>
@@ -108,7 +108,7 @@
           </a>
           <a href="">
             <div class="content">
-              <img src="assets/img/images.jpeg" alt="" />
+              <img src="img/images.jpeg" alt="" />
               <div class="details">
                 <span>Baruak Tampan</span>
                 <p>test Message</p>
@@ -118,7 +118,7 @@
           </a>
           <a href="">
             <div class="content">
-              <img src="assets/img/images.jpeg" alt="" />
+              <img src="img/images.jpeg" alt="" />
               <div class="details">
                 <span>Baruak Tampan</span>
                 <p>test Message</p>
