--- a/client/views/register.ejs
+++ b/client/views/register.ejs
@@ -4,15 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat App</title>
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"> -->
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="https://kit.fontawesome.com/bfa93e93e8.js" crossorigin="anonymous"></script>
+    <script defer src="js/show-hide-pass.js"></script>
   </head>
   <body>
     <div class="wrapper">
-      <section class="form login">
+      <section class="form singup">
         <header>Chat App</header>
         <form action="#">
           <div class="error-txt">This an error message!</div>
+          <div class="name-details">
+            <div class="field input">
+              <label>First Name</label>
+              <input type="text" placeholder="First Name" />
+            </div>
+            <div class="field input">
+              <label>Last Name</label>
+              <input type="text" placeholder="Last Name" />
+            </div>
+          </div>
           <div class="field input">
             <label>Email Address</label>
             <input type="text" placeholder="Enter your email" />
@@ -22,17 +33,16 @@
             <input type="password" placeholder="Enter your password" />
             <i class="fas fa-eye"></i>
           </div>
+          <div class="field image">
+            <label>Select Image</label>
+            <input type="file" />
+          </div>
           <div class="field button">
             <input type="submit" value="Countinue to Chat" />
           </div>
         </form>
-        <div class="link">Not yet signed up? <a href="#">Sign up!</a></div>
+        <div class="link">Already signed up? <a href="#">Login now</a></div>
       </section>
     </div>
-    <script
-      src="https://kit.fontawesome.com/bfa93e93e8.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="asssets/js/show-hide-pass.js"></script>
   </body>
 </html>
