setup login page

--- a/client/views/login.ejs
+++ b/client/views/login.ejs
@@ -1,7 +1,7 @@
 <section class="form login">
   <header>Login to Chat App</header>
-  <form action="/">
-    <div class="error-txt">This an error message!</div>
+  <form method="post" action="/">
+    <!-- <div class="error-txt">This an error message!</div> -->
     <div class="field input">
       <label>Email Address</label>
       <input type="text" name="email" placeholder="Enter your email" />
@@ -12,9 +12,9 @@
       <i class="fas fa-eye"></i>
     </div>
     <div class="field button">
-      <input type="submit" value="Countinue to Chat" />
+      <input type="submit" value="Continue to Chat" />
     </div>
   </form>
   <div class="link">Not yet signed up? <a href="#">Sign up!</a></div>
 </section>
-<script src="js/show-hide-pass"></script>
+<script src="js/show-hide-pass.js"></script>
