--- a/client/views/login.ejs
+++ b/client/views/login.ejs
@@ -1,7 +1,9 @@
 <section class="form login">
   <header>Login to Chat App</header>
-  <form method="post" action="/">
-    <!-- <div class="error-txt">This an error message!</div> -->
+  <form method="post" action="/login">
+    <% if (errors.length > 0) { %>
+    <div class="error-txt"><%- errors.map(err => err.msg).join('<br />') %></div>
+    <% } %>
     <div class="field input">
       <label>Email Address</label>
       <input type="text" name="email" placeholder="Enter your email" />
