add links in login to register page

--- a/client/views/login.ejs
+++ b/client/views/login.ejs
@@ -17,6 +17,6 @@
       <input type="submit" value="Continue to Chat" />
     </div>
   </form>
-  <div class="link">Not yet signed up? <a href="#">Sign up!</a></div>
+  <div class="link">Not yet signed up? <a href="/register">Sign up!</a></div>
 </section>
 <script src="js/show-hide-pass.js"></script>
