feat: add reserved default avatar if user doesn't upload when register

--- a/client/views/register.ejs
+++ b/client/views/register.ejs
@@ -31,6 +31,6 @@
       <input type="submit" value="Continue to Chat" />
     </div>
   </form>
-  <div class="link">Already signed up? <a href="#">Login now</a></div>
+  <div class="link">Already signed up? <a href="/login">Login now</a></div>
 </section>
 <script src="js/show-hide-pass.js"></script>
