--- a/client/views/user.ejs
+++ b/client/views/user.ejs
@@ -46,7 +46,7 @@
     <% } else { %>
     <!-- else -->
     <% chats.hasNoChat.forEach(user => { %>
-    <a href="/chat/new">
+    <a data-userid="<%= user.id %>">
       <div class="content">
         <img src="uploads/<%= user.avatar %>" alt="" />
         <div class="details">
@@ -60,4 +60,33 @@
     <% } %>
   </div>
 </section>
-<script src="js/user.js"></script>
+<script>
+  const useridElems = document.querySelectorAll(`a[data-userid]`);
+  useridElems.forEach((useridElem) =>
+    useridElem.addEventListener(`click`, async (e) => {
+      const partnerid = useridElem.dataset.userid;
+      const res = await createRoom(partnerid);
+
+      if (res.code != 200) {
+        return alert(res.msg);
+      }
+      const chatUrl = `/chat/${res.roomName}`;
+      window.open(chatUrl);
+    })
+  );
+
+  async function createRoom(partnerid) {
+    const doCreateRoom = await fetch(`/chat/room`, {
+      headers: {
+        'Content-Type': 'application/json',
+      },
+      method: 'POST',
+      body: JSON.stringify({
+        partnerid: partnerid,
+      }),
+    });
+    const res = await doCreateRoom.json();
+    return res;
+  }
+</script>
+<script defer src="js/user.js"></script>
