add root path for client url for static resources

--- a/client/views/register.ejs
+++ b/client/views/register.ejs
@@ -33,4 +33,4 @@
   </form>
   <div class="link">Already signed up? <a href="/login">Login now</a></div>
 </section>
-<script src="js/show-hide-pass.js"></script>
+<script src="/js/show-hide-pass.js"></script>
