--- a/client/views/chat.ejs
+++ b/client/views/chat.ejs
@@ -1,7 +1,7 @@
 <section class="chat-area">
   <header>
     <a href="" class="back-icon"><i class="fas fa-arrow-left"></i></a>
-    <img src="img/images.jpeg" alt="" />
+    <img src="/img/images.jpeg" alt="" />
     <div class="details">
       <span>Baruak Tampan</span>
       <p>Online</p>
@@ -17,7 +17,7 @@
       </div>
     </div>
     <div class="chat incoming">
-      <img src="img/images.jpeg" alt="" />
+      <img src="/img/images.jpeg" alt="" />
       <div class="details">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
       </div>
@@ -31,7 +31,7 @@
       </div>
     </div>
     <div class="chat incoming">
-      <img src="img/images.jpeg" alt="" />
+      <img src="/img/images.jpeg" alt="" />
       <div class="details">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
       </div>
@@ -45,7 +45,7 @@
       </div>
     </div>
     <div class="chat incoming">
-      <img src="img/images.jpeg" alt="" />
+      <img src="/img/images.jpeg" alt="" />
       <div class="details">
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
       </div>
