--- a/client/views/login.ejs
+++ b/client/views/login.ejs
@@ -19,4 +19,4 @@
   </form>
   <div class="link">Not yet signed up? <a href="/register">Sign up!</a></div>
 </section>
-<script src="js/show-hide-pass.js"></script>
+<script src="/js/show-hide-pass.js"></script>
