--- a/client/views/chat.ejs
+++ b/client/views/chat.ejs
@@ -1,6 +1,7 @@
 <section class="chat-area">
   <header>
-    <a href="" class="back-icon"><i class="fas fa-arrow-left"></i></a>
+    <a href="" class="back-icon"><img src="/img/arrow-left-solid.svg" alt=""></i></a>
+    <!-- <a href="" class="back-icon"><i class="fas fa-arrow-left"></i></a> -->
     <img src="/uploads/<%= partner.avatar %>" alt="" />
     <div class="details">
       <span><%= partner.name %></span>
@@ -30,6 +31,7 @@
   </div>
   <form action="#" class="typing-area">
     <input type="text" placeholder="Type a message here..." />
-    <button><i class="fa-solid fa-paper-plane"></i></button>
+    <button><img src="/img/telegram.svg" alt=""></button>
+    <!-- <button><i class="fa-solid fa-paper-plane"></i></button> -->
   </form>
 </section>
