--- a/client/views/login.ejs
+++ b/client/views/login.ejs
@@ -11,7 +11,8 @@
     <div class="field input">
       <label>Password</label>
       <input type="password" name="password" placeholder="Enter your password" />
-      <i class="fas fa-eye"></i>
+      <i><img src="/img/eye-solid.svg" alt=""></i>
+      <!-- <i class="fas fa-eye"></i> -->
     </div>
     <div class="field button">
       <input type="submit" value="Continue to Chat" />
