--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -63,20 +63,19 @@ form .name-details .field:last-child {
   margin-left: 10px;
 }
 
-.form form .field{
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    margin-bottom: 10px;
+.form form .field {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  margin-bottom: 10px;
 }
 
-.form form .field i img{
+.form form .field i img {
   width: 20px;
   height: 20px;
   display: flex;
   position: relative;
   flex-direction: column;
-  
 }
 
 .form form .field label {
@@ -303,14 +302,13 @@ form .name-details .field:last-child {
   padding: 18px 30px;
 }
 
-.chat-area header .back-icon img{
+.chat-area header .back-icon img {
   width: 24px;
   height: 24px;
   color: #333;
   margin-top: 10px;
   margin-left: -5px;
 }
-
 
 .chat-area header img {
   height: 45px;
@@ -390,10 +388,10 @@ form .name-details .field:last-child {
   border: 1px solid #ccc;
   border-radius: 5px;
   outline: none;
+  padding: 0 15px;
 }
 
 .typing-area button {
-  width: 55px;
   border: none;
   outline: none;
   background-color: #fff;
@@ -402,11 +400,10 @@ form .name-details .field:last-child {
   cursor: pointer;
 }
 
-.typing-area button img{
+.typing-area button img {
   width: 40px;
   height: 40px;
   color: #fff;
   display: flex;
   align-items: end;
-  margin-left: 6px;
 }
