--- a/client/views/register.ejs
+++ b/client/views/register.ejs
@@ -21,7 +21,8 @@
     <div class="field input">
       <label>Password</label>
       <input type="password" name="password" placeholder="Enter your password" />
-      <i class="fas fa-eye"></i>
+      <i><img src="/img/eye-solid.svg" alt=""></i>
+      <!-- <i class="fas fa-eye"></i> -->
     </div>
     <div class="field image">
       <label>Select Image</label>
