--- a/client/views/chat.ejs
+++ b/client/views/chat.ejs
@@ -32,7 +32,11 @@
     <% }) %>
   </div>
   <input type="hidden" id="__roomid" value="<%= room.id %>" />
-  <input type="hidden" id="__last_message_id" value="<%= messages.at(-1).id %>" />
+  <input
+    type="hidden"
+    id="__last_message_id"
+    value="<%= messages.length == 0 ? 0 : messages.at(-1).id %>"
+  />
   <div class="typing-area">
     <input id="message" type="text" placeholder="Type a message here..." />
     <button type="button" id="send_message">
@@ -122,10 +126,9 @@
     async function updateChat() {
       const latestMessages = await getLatestMessage(roomid.value, lastMessageId.value);
       const chatElement = buildChatElement(latestMessages);
-      console.log(latestMessages);
-      console.log(chatElement);
       chatBox.innerHTML += chatElement;
       chatBox.scroll(0, chatBox.scrollHeight);
+      lastMessageId.value = latestMessages.at(-1).id;
     }
   })();
 </script>
